--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,4 +25,4 @@ steps:
       - 'ssh'
       - '${_VM_NAME}'
       - '--zone=${_VM_ZONE}'
-      - '--command=docker pull ${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REPO_NAME}/${_IMAGE_NAME}:latest && if [ $(docker ps -a -q -f name=server-go) ]; then docker stop server-go && docker rm server-go; fi && docker run -d -p ${_PORT}:${_PORT} --name server-go -e MYSQL_DSN=${_MYSQL_DSN} ${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REPO_NAME}/${_IMAGE_NAME}:latest'
+      - '--command=docker pull ${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REPO_NAME}/${_IMAGE_NAME}:latest && if [ $(docker ps -a -q -f name=server-go) ]; then docker stop server-go && docker rm server-go; fi && docker run -d -p ${_PORT}:${_PORT} --name server-go -e MYSQL_DSN="${_MYSQL_DSN}" ${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REPO_NAME}/${_IMAGE_NAME}:latest'
